// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`opened-resolved-filter Renders \`opened-resolved-filter\` with custom props 1`] = `
<div
  class="v-list__group"
>
  <div
    class="v-list__group__header"
  >
    <div
      role="listitem"
    >
      <div
        class="v-list__tile theme--light"
      >
        Filter on Open/Resolved
      </div>
    </div>
    <div
      class="v-list__group__header__append-icon"
    >
      <i
        aria-hidden="true"
        class="v-icon material-icons theme--light"
      >
        keyboard_arrow_down
      </i>
    </div>
  </div>
  <transition-stub
    mode="in-out"
    name="expand-transition"
  >
    <div
      class="v-list__group__items"
      style="display: none;"
    >
      <div
        class="container"
      >
        <div
          class="layout"
        >
          <div
            class="v-input mt-0 v-input--selection-controls v-input--radio-group v-input--radio-group--column v-input--hide-details theme--light"
          >
            <div
              class="v-input__control"
            >
              <div
                class="v-input__slot"
                style="height: auto;"
              >
                <div
                  class="v-input--radio-group__input"
                  role="radiogroup"
                >
                  <div
                    class="v-radio theme--light"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        aria-label="Opened alarms"
                        name="opened"
                        role="radio"
                        type="radio"
                        value="true"
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        radio_button_unchecked
                      </i>
                    </div>
                    <label
                      aria-hidden="true"
                      class="v-label theme--light"
                      style="left: 0px; position: relative;"
                    >
                      Opened alarms
                    </label>
                  </div>
                  <div
                    class="v-radio theme--light"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        aria-label="Opened and recent resolved alarms"
                        name="opened"
                        role="radio"
                        type="radio"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        radio_button_unchecked
                      </i>
                    </div>
                    <label
                      aria-hidden="true"
                      class="v-label theme--light"
                      style="left: 0px; position: relative;"
                    >
                      Opened and recent resolved alarms
                    </label>
                  </div>
                  <div
                    class="v-radio theme--light"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        aria-label="All resolved alarms"
                        name="opened"
                        role="radio"
                        type="radio"
                        value="false"
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        radio_button_unchecked
                      </i>
                    </div>
                    <label
                      aria-hidden="true"
                      class="v-label theme--light"
                      style="left: 0px; position: relative;"
                    >
                      All resolved alarms
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`opened-resolved-filter Renders \`opened-resolved-filter\` with default props 1`] = `
<div
  class="v-list__group"
>
  <div
    class="v-list__group__header"
  >
    <div
      role="listitem"
    >
      <div
        class="v-list__tile theme--light"
      >
        Filter on Open/Resolved
      </div>
    </div>
    <div
      class="v-list__group__header__append-icon"
    >
      <i
        aria-hidden="true"
        class="v-icon material-icons theme--light"
      >
        keyboard_arrow_down
      </i>
    </div>
  </div>
  <transition-stub
    mode="in-out"
    name="expand-transition"
  >
    <div
      class="v-list__group__items"
      style="display: none;"
    >
      <div
        class="container"
      >
        <div
          class="layout"
        >
          <div
            class="v-input mt-0 v-input--selection-controls v-input--radio-group v-input--radio-group--column v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light"
          >
            <div
              class="v-input__control"
            >
              <div
                class="v-input__slot"
                style="height: auto;"
              >
                <div
                  class="v-input--radio-group__input"
                  role="radiogroup"
                >
                  <div
                    class="v-radio theme--light"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        aria-label="Opened alarms"
                        name="opened"
                        role="radio"
                        type="radio"
                        value="true"
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        radio_button_unchecked
                      </i>
                    </div>
                    <label
                      aria-hidden="true"
                      class="v-label theme--light"
                      style="left: 0px; position: relative;"
                    >
                      Opened alarms
                    </label>
                  </div>
                  <div
                    class="v-radio theme--light"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        aria-label="Opened and recent resolved alarms"
                        name="opened"
                        role="radio"
                        type="radio"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        radio_button_unchecked
                      </i>
                    </div>
                    <label
                      aria-hidden="true"
                      class="v-label theme--light"
                      style="left: 0px; position: relative;"
                    >
                      Opened and recent resolved alarms
                    </label>
                  </div>
                  <div
                    class="v-radio theme--light"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        aria-label="All resolved alarms"
                        name="opened"
                        role="radio"
                        type="radio"
                        value="false"
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        radio_button_unchecked
                      </i>
                    </div>
                    <label
                      aria-hidden="true"
                      class="v-label theme--light"
                      style="left: 0px; position: relative;"
                    >
                      All resolved alarms
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </transition-stub>
</div>
`;
